--- a/subject.html
+++ b/subject.html
@@ -15,6 +15,9 @@
             font-size: 1.8rem;
         }
 
+        .navbar {
+            padding-left:10px !important;
+        }
         .spancontainer {
             display: flex;
             /* margin-top: -10px; */
@@ -29,6 +32,10 @@
         .content {
             padding-top: 10px !important;
         }
+
+        .icon-wrapper {
+            position: relative !important;
+        }
     </style>
 </head>
 
@@ -36,7 +43,7 @@
 
     <!-- Header with back button and 'Subjects' title -->
     <nav class="navbar">
-        <div class="back-button"
+        <div class="back-button icon-wrapper"
             onclick="window.location.href='home.html?board=' + encodeURIComponent(board) + '&class=' + encodeURIComponent(userClass) + '&type=' + encodeURIComponent(type);">
             <i class="fa-solid fa-chevron-left"></i>
         </div>
