--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,10 @@
             margin-right: auto;
         }
 
+        .navbar {
+            padding-left: 10px !important;
+        }
+
         .title {
             font-size: 1.8rem;
         }
@@ -52,19 +56,20 @@
         }
 
         .current-settings h3 {
-            margin-bottom:10px ;
+            margin-bottom: 10px;
         }
 
-        .current-settings  i {
+        .current-settings i {
             margin-right: 10px;
         }
+
         .current-settings p {
             font-size: 1.25rem;
         }
-       
-         /* ripple effect css */
-        
-         .ripple-target {
+
+        /* ripple effect css */
+
+        .ripple-target {
             position: relative;
             overflow: hidden;
         }
