--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,7 @@
         }
 
         .navbar {
+            padding-block: 20px;
             padding-left: 10px !important;
         }
 
@@ -94,6 +95,7 @@
 
         .icon-wrapper {
             position: relative;
+            width: 47px;
         }
     </style>
 </head>
@@ -102,7 +104,7 @@
     <!-- Top Navbar -->
     <nav class="navbar">
         <div class="back-button icon-wrapper" id="backBtn">
-            <i class="fa-solid fa-chevron-left"></i>
+            <i class="fa-solid fa-arrow-left"></i>
         </div>
         <div class="title">
             <h2>Settings</h2>
