--- a/subject.html
+++ b/subject.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
        body {
-        padding-top: 140px !important;
+        padding-top: 110px !important;
        }
         .title h2 {
             font-size: 1.8rem;
@@ -17,6 +17,7 @@
 
         .navbar {
             padding-left:10px !important;
+            padding-block: 22px !important;
         }
         .spancontainer {
             display: flex;
@@ -35,6 +36,7 @@
 
         .icon-wrapper {
             position: relative !important;
+            width: 47px;
         }
     </style>
 </head>
@@ -45,7 +47,7 @@
     <nav class="navbar">
         <div class="back-button icon-wrapper"
             onclick="window.location.href='home.html?board=' + encodeURIComponent(board) + '&class=' + encodeURIComponent(userClass) + '&type=' + encodeURIComponent(type);">
-            <i class="fa-solid fa-chevron-left"></i>
+            <i class="fa-solid fa-arrow-left"></i>
         </div>
         <div class="title">
             <h2>Subjects</h2> <!-- Display the type here -->
